[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/background/login.jpg" type="Texture" id=1]
[ext_resource path="res://assets/sprites/button/disabled.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/button/normal.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/button/pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/login-logo.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://login/LoginScreen.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=2]
size = 55
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = 150.0
margin_right = -150.0
margin_bottom = -100.0

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_right = 980.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="UsernameContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_left = 298.0
margin_top = 34.0
margin_right = 682.0
margin_bottom = 102.0
size_flags_horizontal = 4

[node name="UsernameTitle" type="Label" parent="NinePatchRect/VBoxContainer/UsernameContainer"]
margin_right = 230.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
text = "Jméno: "

[node name="Username" type="LineEdit" parent="NinePatchRect/VBoxContainer/UsernameContainer"]
margin_left = 234.0
margin_right = 384.0
margin_bottom = 68.0
rect_min_size = Vector2( 150, 20 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 3 )
align = 1
max_length = 6

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 106.0
margin_right = 980.0
margin_bottom = 111.0
rect_min_size = Vector2( 0, 5 )

[node name="PasswordContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_left = 299.0
margin_top = 115.0
margin_right = 680.0
margin_bottom = 183.0
size_flags_horizontal = 4

[node name="PasswordTitle" type="Label" parent="NinePatchRect/VBoxContainer/PasswordContainer"]
margin_right = 227.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
text = "Heslo:   "

[node name="Password" type="LineEdit" parent="NinePatchRect/VBoxContainer/PasswordContainer"]
margin_left = 231.0
margin_right = 381.0
margin_bottom = 68.0
rect_min_size = Vector2( 150, 25 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 4 )
align = 1
secret = true

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 187.0
margin_right = 980.0
margin_bottom = 237.0
rect_min_size = Vector2( 0, 50 )

[node name="LoginButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_left = 390.0
margin_top = 241.0
margin_right = 590.0
margin_bottom = 316.0
rect_min_size = Vector2( 200, 75 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/LoginButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Přihlásit"
align = 1
valign = 1

[node name="BackButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
visible = false
margin_left = 390.0
margin_top = 320.0
margin_right = 590.0
margin_bottom = 395.0
rect_min_size = Vector2( 200, 75 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/BackButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Zpět"
align = 1
valign = 1

[node name="Logo" type="NinePatchRect" parent="NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -500.0
margin_top = 10.0
margin_right = 500.0
margin_bottom = 160.0
texture = ExtResource( 5 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="PopUp" type="AcceptDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -40.0
margin_right = 125.0
margin_bottom = 40.0
window_title = "Error!"

[connection signal="pressed" from="NinePatchRect/VBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
